added city_id to listings table
