# app/Http/API/Requests/Listing/UpdateListingRequest.php
@@ -13,15 +13,16 @@ class UpdateListingRequest extends FormRequest
     {
         return [
             'title'        => ['sometimes', 'string', 'max:191'],
-            'description'  => ['sometimes', 'string'],
-            'price'        => ['sometimes', 'numeric', 'min:0', 'max:9999999'],
-            'currency'     => ['sometimes', new Enum(Currency::class)],
-            'price_type'   => ['sometimes', new Enum(PriceType::class)],
-            'phone'        => ['sometimes', 'string'],
-            'has_whatsapp' => ['sometimes', 'boolean'],
-            'has_telegram' => ['sometimes', 'boolean'],
-            'latitude'     => ['sometimes', 'string'],
-            'longitude'    => ['sometimes', 'string'],
+            'description'  => ['sometimes', 'nullable', 'string'],
+            'price'        => ['sometimes', 'nullable', 'numeric', 'min:0', 'max:9999999'],
+            'currency'     => ['sometimes', 'nullable', new Enum(Currency::class)],
+            'price_type'   => ['sometimes', 'nullable', new Enum(PriceType::class)],
+            'city_id'      => ['sometimes', 'nullable', 'exists:cities,id'],
+            'phone'        => ['sometimes', 'nullable', 'string'],
+            'has_whatsapp' => ['sometimes', 'nullable', 'boolean'],
+            'has_telegram' => ['sometimes', 'nullable', 'boolean'],
+            'latitude'     => ['sometimes', 'nullable', 'numeric', 'min:-90', 'max:90'],
+            'longitude'    => ['sometimes', 'nullable', 'numeric', 'min:-180', 'max:180'],
         ];
     }
 
